// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge should render 1`] = `
<div>
  <span
    class="Badge__Wrapper-sc-1d7juq8-0 fMCGPT flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent undefined"
  >
    <span />
  </span>
</div>
`;

exports[`Badge should render with icon 1`] = `
<div>
  <span
    class="Badge__Wrapper-sc-1d7juq8-0 fMCGPT flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent undefined"
  >
    <div
      class="sc-bdfBwQ fdfkzt"
      height="12"
      width="12"
    />
    <span />
  </span>
</div>
`;

exports[`Badge should render with position 'bottom' 1`] = `
<div>
  <span
    class="Badge__Wrapper-sc-1d7juq8-0 yRBNV flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent undefined"
  >
    <div
      class="sc-bdfBwQ fdfkzt"
      height="12"
      width="12"
    />
    <span />
  </span>
</div>
`;

exports[`Badge should render with position 'bottom-left' 1`] = `
<div>
  <span
    class="Badge__Wrapper-sc-1d7juq8-0 gBIrIF flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent undefined"
  >
    <div
      class="sc-bdfBwQ fdfkzt"
      height="12"
      width="12"
    />
    <span />
  </span>
</div>
`;

exports[`Badge should render with position 'bottom-right' 1`] = `
<div>
  <span
    class="Badge__Wrapper-sc-1d7juq8-0 fMCGPT flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent undefined"
  >
    <div
      class="sc-bdfBwQ fdfkzt"
      height="12"
      width="12"
    />
    <span />
  </span>
</div>
`;

exports[`Badge should render with position 'left' 1`] = `
<div>
  <span
    class="Badge__Wrapper-sc-1d7juq8-0 fklskl flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent undefined"
  >
    <div
      class="sc-bdfBwQ fdfkzt"
      height="12"
      width="12"
    />
    <span />
  </span>
</div>
`;

exports[`Badge should render with position 'right' 1`] = `
<div>
  <span
    class="Badge__Wrapper-sc-1d7juq8-0 iAMNLr flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent undefined"
  >
    <div
      class="sc-bdfBwQ fdfkzt"
      height="12"
      width="12"
    />
    <span />
  </span>
</div>
`;

exports[`Badge should render with position 'top' 1`] = `
<div>
  <span
    class="Badge__Wrapper-sc-1d7juq8-0 DPtOY flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent undefined"
  >
    <div
      class="sc-bdfBwQ fdfkzt"
      height="12"
      width="12"
    />
    <span />
  </span>
</div>
`;

exports[`Badge should render with position 'top-left' 1`] = `
<div>
  <span
    class="Badge__Wrapper-sc-1d7juq8-0 hJWeDA flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent undefined"
  >
    <div
      class="sc-bdfBwQ fdfkzt"
      height="12"
      width="12"
    />
    <span />
  </span>
</div>
`;

exports[`Badge should render with position 'top-right' 1`] = `
<div>
  <span
    class="Badge__Wrapper-sc-1d7juq8-0 ibJGey flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent undefined"
  >
    <div
      class="sc-bdfBwQ fdfkzt"
      height="12"
      width="12"
    />
    <span />
  </span>
</div>
`;

exports[`Badge should render with size 'lg' 1`] = `
<div>
  <span
    class="Badge__Wrapper-sc-1d7juq8-0 gOwpmH flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent undefined"
  >
    <div
      class="sc-bdfBwQ fdfkzt"
      height="12"
      width="12"
    />
    <span />
  </span>
</div>
`;

exports[`Badge should render with size 'md' 1`] = `
<div>
  <span
    class="Badge__Wrapper-sc-1d7juq8-0 fMCGPT flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent undefined"
  >
    <div
      class="sc-bdfBwQ fdfkzt"
      height="12"
      width="12"
    />
    <span />
  </span>
</div>
`;
